--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "lodash": "^3.6.0",
     "underscore.string": "^3.0.3",
     "yeoman-generator": "^0.19.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tkambler/generator-modernweb"
   }
 }
