--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "generator-modernweb",
-  "version": "1.0.9",
+  "version": "1.1.0",
   "description": "An example Yeoman generator for the book Pro JavaScript Frameworks for Modern Web Development",
   "files": [
+    "bin",
     "app",
     "app/templates",
     "app/templates/lib",
